fix scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -15,32 +15,34 @@ html {
   items-center;
 }
 
-.list-scroll::-webkit-scrollbar {
-	width: 12px;
-	background-color: transparent;
-}
-.list-scroll::-webkit-scrollbar-thumb {
-	background-color: #222;
-	border-radius: 10px;
-}
-.list-scroll::-webkit-scrollbar-thumb:hover {
-	background-color: #fff;
-}
-.list-scroll::-webkit-scrollbar-button {
-	height: 5px;
-}
+@media (min-width: 768px) {
+	.list-scroll::-webkit-scrollbar {
+		width: 12px;
+		background-color: transparent;
+	}
+	.list-scroll::-webkit-scrollbar-thumb {
+		background-color: #222;
+		border-radius: 10px;
+	}
+	.list-scroll::-webkit-scrollbar-thumb:hover {
+		background-color: #fff;
+	}
+	.list-scroll::-webkit-scrollbar-button {
+		height: 5px;
+	}
 
-.page-scroll::-webkit-scrollbar {
-	width: 12px;
-	background-color: transparent;
-}
-.page-scroll::-webkit-scrollbar-thumb {
-	@apply bg-primary;
-	border-radius: 10px;
-}
-.page-scroll::-webkit-scrollbar-thumb:hover {
-	@apply bg-white;
-}
-.page-scroll::-webkit-scrollbar-button {
-	height: 5px;
+	.page-scroll::-webkit-scrollbar {
+		width: 12px;
+		background-color: transparent;
+	}
+	.page-scroll::-webkit-scrollbar-thumb {
+		@apply bg-primary;
+		border-radius: 10px;
+	}
+	.page-scroll::-webkit-scrollbar-thumb:hover {
+		@apply bg-white;
+	}
+	.page-scroll::-webkit-scrollbar-button {
+		height: 5px;
+	}
 }
